ref(ParticipantOptions): remove any side effect logic
Try to remove any logic which could cause unexpected side effects when
loading/merging properties sets (logic which assumes values which were
not explicitly set).

ref(ParticipantOptions): keep defaults in separate container

Merge operation did not work as expected, because default values were
stored in the backend directly (it's like they were explicitly set at
some point, but default should be a fallback in case of missing value).